[gd_scene load_steps=13 format=3 uid="uid://b53i8f73mqi3r"]

[ext_resource type="Script" path="res://addons/diisis/editor/src/line.gd" id="1_6i1bg"]
[ext_resource type="Theme" uid="uid://jddhsc4auo55" path="res://addons/diisis/editor/visuals/amber_cherryblossom.tres" id="1_viyfr"]
[ext_resource type="PackedScene" uid="uid://c23v82ojiuvbs" path="res://addons/diisis/editor/src/header.tscn" id="2_qs17t"]
[ext_resource type="PackedScene" uid="uid://bgvfjindfxypf" path="res://addons/diisis/editor/src/facts.tscn" id="3_01wq6"]
[ext_resource type="PackedScene" uid="uid://btcdvjuk2ku18" path="res://addons/diisis/editor/src/choice_container.tscn" id="3_jjtdq"]
[ext_resource type="PackedScene" uid="uid://bpuqu3kymqlwb" path="res://addons/diisis/editor/src/conditionals.tscn" id="3_pymyd"]
[ext_resource type="PackedScene" uid="uid://c7k2h1p5qalaa" path="res://addons/diisis/editor/src/text_content.tscn" id="3_ty44c"]
[ext_resource type="PackedScene" uid="uid://co4e6yj2ed45f" path="res://addons/diisis/editor/src/instruction_container.tscn" id="4_phdce"]
[ext_resource type="PackedScene" uid="uid://dt4yhnj3n5k5m" path="res://addons/diisis/editor/src/folder_container.tscn" id="9_23thg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k5f2i"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 5
border_width_top = 4
border_color = Color(0.192157, 0.00392157, 0.156863, 1)
border_blend = true

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ynk1p"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d3j1g"]
bg_color = Color(0.0901961, 0.0901961, 0.0901961, 0.0941176)
border_width_left = 6
border_width_top = 6
border_color = Color(0.8, 0.462745, 0.129412, 0.772549)
border_blend = true

[node name="Line" type="VBoxContainer"]
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.369
offset_bottom = -0.112015
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme = ExtResource("1_viyfr")
script = ExtResource("1_6i1bg")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_k5f2i")

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="IndentContainer" type="MarginContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="HBoxContainer" parent="PanelContainer/HBoxContainer/MarginContainer"]
layout_mode = 2

[node name="MetaControls" type="VBoxContainer" parent="PanelContainer/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VisibleToggle" type="CheckBox" parent="PanelContainer/HBoxContainer/MarginContainer/VBoxContainer/MetaControls"]
layout_mode = 2
focus_mode = 0
text = "vis"

[node name="LockToggle" type="CheckBox" parent="PanelContainer/HBoxContainer/MarginContainer/VBoxContainer/MetaControls"]
layout_mode = 2
focus_mode = 0
disabled = true
text = "lock"

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_ynk1p")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer/MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/HBoxContainer/MarginContainer/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer/MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="MoveUp" type="Button" parent="PanelContainer/HBoxContainer/MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "^"

[node name="IndexLabel" type="Label" parent="PanelContainer/HBoxContainer/MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="MoveDown" type="Button" parent="PanelContainer/HBoxContainer/MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "v"

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/HBoxContainer/MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="InsertLineAbove" type="Button" parent="PanelContainer/HBoxContainer/MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
focus_mode = 0
text = "+^+"

[node name="InsertLineBelow" type="Button" parent="PanelContainer/HBoxContainer/MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 10
focus_mode = 0
text = "+v+"

[node name="VBoxContainer3" type="HBoxContainer" parent="PanelContainer/HBoxContainer/MarginContainer/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="MoveToIndexButton" type="Button" parent="PanelContainer/HBoxContainer/MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer3"]
layout_mode = 2
size_flags_vertical = 0
focus_mode = 0
text = ">>"

[node name="MoveToIndexSpinBox" type="SpinBox" parent="PanelContainer/HBoxContainer/MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer3"]
layout_mode = 2
size_flags_vertical = 0

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_d3j1g")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer/PanelContainer"]
layout_mode = 2

[node name="Controls" type="HBoxContainer" parent="PanelContainer/HBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/HBoxContainer/PanelContainer/VBoxContainer/Controls"]
layout_mode = 2

[node name="HeadVisibilityToggle" type="CheckButton" parent="PanelContainer/HBoxContainer/PanelContainer/VBoxContainer/Controls/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
focus_mode = 0
text = "header"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/HBoxContainer/PanelContainer/VBoxContainer/Controls/VBoxContainer2"]
layout_mode = 2

[node name="ConditionalsVisibilityToggle" type="CheckButton" parent="PanelContainer/HBoxContainer/PanelContainer/VBoxContainer/Controls/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
focus_mode = 0
text = "conditionals"

[node name="FactsVisibilityToggle" type="CheckButton" parent="PanelContainer/HBoxContainer/PanelContainer/VBoxContainer/Controls/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
focus_mode = 0
text = "facts"

[node name="HeaderContainer" type="HBoxContainer" parent="PanelContainer/HBoxContainer/PanelContainer/VBoxContainer/Controls"]
layout_mode = 2

[node name="Header" parent="PanelContainer/HBoxContainer/PanelContainer/VBoxContainer/Controls/HeaderContainer" instance=ExtResource("2_qs17t")]
layout_mode = 2

[node name="HeaderShort" type="Label" parent="PanelContainer/HBoxContainer/PanelContainer/VBoxContainer/Controls/HeaderContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="DeleteContainer" type="MarginContainer" parent="PanelContainer/HBoxContainer/PanelContainer/VBoxContainer/Controls"]
layout_mode = 2
size_flags_horizontal = 10

[node name="Delete" type="Button" parent="PanelContainer/HBoxContainer/PanelContainer/VBoxContainer/Controls/DeleteContainer"]
layout_mode = 2
focus_mode = 0
text = "delete"

[node name="Content" type="HBoxContainer" parent="PanelContainer/HBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Conditionals" parent="PanelContainer/HBoxContainer/PanelContainer/VBoxContainer/Content" node_paths=PackedStringArray("visibility_toggle_button") instance=ExtResource("3_pymyd")]
layout_mode = 2
visibility_toggle_button = NodePath("../../Controls/VBoxContainer2/HBoxContainer/ConditionalsVisibilityToggle")

[node name="Facts" parent="PanelContainer/HBoxContainer/PanelContainer/VBoxContainer/Content" node_paths=PackedStringArray("visibility_toggle_button") instance=ExtResource("3_01wq6")]
layout_mode = 2
visibility_toggle_button = NodePath("../../Controls/VBoxContainer2/HBoxContainer/FactsVisibilityToggle")

[node name="Content" type="VBoxContainer" parent="PanelContainer/HBoxContainer/PanelContainer/VBoxContainer/Content"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextContent" parent="PanelContainer/HBoxContainer/PanelContainer/VBoxContainer/Content/Content" instance=ExtResource("3_ty44c")]
layout_mode = 2

[node name="ChoiceContainer" parent="PanelContainer/HBoxContainer/PanelContainer/VBoxContainer/Content/Content" instance=ExtResource("3_jjtdq")]
layout_mode = 2

[node name="InstructionContainer" parent="PanelContainer/HBoxContainer/PanelContainer/VBoxContainer/Content/Content" instance=ExtResource("4_phdce")]
layout_mode = 2

[node name="FolderContainer" parent="PanelContainer/HBoxContainer/PanelContainer/VBoxContainer/Content/Content" instance=ExtResource("9_23thg")]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2

[connection signal="toggled" from="PanelContainer/HBoxContainer/MarginContainer/VBoxContainer/MetaControls/VisibleToggle" to="." method="_on_visible_toggle_toggled"]
[connection signal="toggled" from="PanelContainer/HBoxContainer/MarginContainer/VBoxContainer/MetaControls/LockToggle" to="." method="_on_lock_toggle_toggled"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/MoveUp" to="." method="_on_move_up_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/MoveDown" to="." method="_on_move_down_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer2/InsertLineAbove" to="." method="_on_insert_line_above_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer2/InsertLineBelow" to="." method="_on_insert_line_below_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer3/MoveToIndexButton" to="." method="_on_move_to_index_button_pressed"]
[connection signal="toggled" from="PanelContainer/HBoxContainer/PanelContainer/VBoxContainer/Controls/VBoxContainer2/HeadVisibilityToggle" to="." method="_on_head_visibility_toggle_toggled"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/PanelContainer/VBoxContainer/Controls/DeleteContainer/Delete" to="." method="_on_delete_pressed"]
